--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-feather": "^1.1.4",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
