--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
-    "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
@@ -25,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.1.3",
     "lodash": "^4.17.11",
     "prismjs": "^1.15.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-feather": "^1.1.4",
