--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-blog",
-  "description": "Starter Gatsby Blog",
+  "name": "Sean McPherson",
+  "description": "Website for Sean McPherson",
   "version": "1.0.0",
   "author": "Sean McPherson <seanmcp25@gmail.com>",
   "bugs": {
